@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[85] --> Remove unit lost control before teleport.
 [84] --> Fix loot GunShip.
 [83] --> Add Name Developer Announce.
 [82] --> Add Name Admin, GameMaster and Guard Announces.
